Add canonical URL for Seq for link generation

--- a/Seq/docker-compose.yml
+++ b/Seq/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: unless-stopped
     environment:
       - ACCEPT_EULA=Y
+      - SEQ_API_CANONICALURI=https://logs.redleg.dev
     volumes:
       - ./data:/data
     ports:
